--- a/index.html
+++ b/index.html
@@ -5,37 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera Web</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <title>Document</title>
+>
 </head>
-<body>
-    <h1>Carlos Valverde</h1>
-    <hr>
-    <h2>Título ESO</h2>
-    <h3>A2 Inglés</h3>
-    <!--Açó es un comentari  -->
-<hr>
-<p><a href="https://mestreacasa.gva.es/web/ieselgrao" target="blank">web institut</a> <a href="https://www.gva.es/va/inicio/presentacion"target="blank">Web favorita</a></p>
-<p id="especial">
-soy un parrafo especial
-</p>
-<p title="soc un title" >
-    soc un parraf amb title
-</p>
-<p class="verd negreta">
-    soc un parraf de la clase verd i negreta
-</p>
-<p class="mio">
-    creado por mi
-</p>
-<p class="negreta">
-    creado por mi
-</p>
-<p class="blau">
-    SOY UN PITUFO
-</p>
-<h2 class="blau">
-soc un h2 pitufo
-</h2>
 </body>
+<h1>Benvinguts</h1>
+<p>Aquest any vaig a fer totes les tasques i aprovaré</p>
+<p>El meu nom es carlos i la wevb està en aquest <a href="https://carlosdaca.github.io/web22/">enllaç</a></p> 
 </html>
