--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 </head>
 </body>
 <h1>Benvinguts</h1>
+<hr>
 <p>Aquest any vaig a fer totes les tasques i aprovaré</p>
 <p>El meu nom es carlos i la wevb està en aquest <a href="https://carlosdaca.github.io/web22/">enllaç</a></p> 
+<hr>
+<blockquote>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi quaerat praesentium voluptatem in quas! Eligendi illo dolores sapiente ipsam optio magnam tempora atque nemo. Iusto voluptatum atque et odio pariatur.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident ipsa quo voluptatem minima debitis dignissimos possimus harum doloremque accusantium odio accusamus, error placeat mollitia, neque laboriosam. Veniam, eum maiores.
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, doloremque. Ipsam vel, cupiditate delectus debitis ducimus id saepe expedita, porro, deleniti veritatis eius. Quibusdam, nemo alias quas provident quam eligendi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, corrupti doloremque facere mollitia cupiditate, ipsa rerum dignissimos consequuntur veritatis eius accusamus commodi optio dolorem vel corporis tenetur soluta voluptatibus modi.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsum reprehenderit impedit natus voluptatem voluptas rerum id blanditiis temporibus, itaque assumenda, ea quidem eos vero maxime maiores repellat excepturi a.
+</blockquote>
+<hr>
+<div class="bloc1">
+    <h3>Bloc 1</h3>
+    <p>Color roig i fons blau</p>
+</div>
+<div class="bloc2">
+    <h3>Bloc 2</h3>
+    <p>Color verd fons yellow</p>
+</div>
+<div class="bloc3">
+    <h3>bloc 3</h3>
+    <p>Color blau fons orange</p>
+</div>
 </html>
