--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
 <div class="bloc3">
     <h3>bloc 3</h3>
     <p>Color blau fons orange</p>
+<span class="hola">hola</span>
+<span class="bon">bon dia</span>
 </div>
 </html>
