--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-</body>
+<body>
 <h1>Benvinguts</h1>
 <hr>
 <p>Aquest any vaig a fer totes les tasques i aprovaré</p>
@@ -22,18 +22,24 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsum reprehenderit impedit natus voluptatem voluptas rerum id blanditiis temporibus, itaque assumenda, ea quidem eos vero maxime maiores repellat excepturi a.
 </blockquote>
 <hr>
-<div class="bloc1">
-    <h3>Bloc 1</h3>
-    <p>Color roig i fons blau</p>
+<div class="bloc">
+    Bloc 1
 </div>
-<div class="bloc2">
-    <h3>Bloc 2</h3>
-    <p>Color verd fons yellow</p>
+<div class="bloc">
+    Bloc 2
 </div>
-<div class="bloc3">
-    <h3>bloc 3</h3>
-    <p>Color blau fons orange</p>
+<div class="bloc">
+    Bloc 3
+</div>
+<div class="bloc">
+    Bloc 4
+</div>
+
 <span class="hola">hola</span>
 <span class="bon">bon dia</span>
-</div>
+
+<p class="azul">M'agraden molt els <span class="dissabtes">dissabtes</span></p>
+<hr>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.3167789047643!2d-0.3340449487691849!3d39.46217172095896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd60485c30e34a19%3A0x98f8d2cea8daa636!2sInstitut%20d&#39;Educaci%C3%B3%20Secund%C3%A0ria%20El%20Grao!5e0!3m2!1sca!2sus!4v1641890792167!5m2!1sca!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/Rb0UmrCXxVA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</body>
 </html>
