--- a/practica 3 6/index.html
+++ b/practica 3 6/index.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title"><h2>Museu vintage del videojoc</h2></div>
-    <div class="subtitle"><p><a href="https://museoarcadevintage.com/va/edifici/">El museu</a> - <a href="https://museoarcadevintage.com/va/arcades-2/">Exposicions</a> - <a href="https://museoarcadevintage.com/producto/visita-virtual/">Visita virtual</a> - <a href="https://museoarcadevintage.com/blog/">Blog</a> - <a href="https://museoarcadevintage.com/contactar/">Contacte</a></p></div>
-    <div class="QS"><h2>Quienes somos</h2>
-    <p>Somos el primer museo del videojuego en España. En él podrás encontrar mas de 300 quipos informáticos, recorriendo la increible historia de los videojuegos desde los años 60 hasta la actualidad, descubriendo autenticos videojuegos miticos restaurados y conservados en perfecto estado original. También apoyamos a nuevos creadores de videojuegos retro, freeware e indie, creando máquinas arcade ex profeso con sus juegos</p>
-    </div>
+    <header><h2>Museu vintage del videojoc</h2></div></header>
+    <nav><div class="subtitle"><p><a href="https://museoarcadevintage.com/va/edifici/">El museu</a> - <a href="https://museoarcadevintage.com/va/arcades-2/">Exposicions</a> - <a href="https://museoarcadevintage.com/producto/visita-virtual/">Visita virtual</a> - <a href="https://museoarcadevintage.com/blog/">Blog</a> - <a href="https://museoarcadevintage.com/contactar/">Contacte</a></p></div></nav>
+    <section><div class="QS"><h2>Quienes somos</h2>
+   <ar<p>Somos el primer museo del videojuego en España. En él podrás encontrar mas de 300 quipos informáticos, recorriendo la increible historia de los videojuegos desde los años 60 hasta la actualidad, descubriendo autenticos videojuegos miticos restaurados y conservados en perfecto estado original. También apoyamos a nuevos creadores de videojuegos retro, freeware e indie, creando máquinas arcade ex profeso con sus juegos</p>
+    </div></section>
 
     <div class="enlaces"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12923330.984109614!2d-7.658460063479292!3d39.80048038826566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd622af236a401c1%3A0xefd8c871bc613cfe!2sMuseo%20del%20Videojuego%20Arcade%20Vintage!5e0!3m2!1sca!2sus!4v1641985578226!5m2!1sca!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"> </iframe><iframe width="600" height="450" src="https://www.youtube.com/embed/apQ1c7RGo5E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-    <div class="pie"><p>Realizamos todo tipo de actividades exposiciones, charlas, competición de videojuegos, Talleres, desarrollo</p>
-    <div class="down"><span class="down1">El sueño de todo informático</span>
+    <footer><div class="pie">Realizamos todo tipo de actividades exposiciones, charlas, competición de videojuegos, Talleres, desarrollo
+    <div class="down"><span class="down1">El sueño de todo informático</span></footer>
 </div>
 </body>
 </html>
