--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
-<!-- Creado -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Formularios2</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-<h1>Benvinguts</h1>
-<hr>
-<p>Aquest any vaig a fer totes les tasques i aprovaré</p>
-<p>El meu nom es carlos i la wevb està en aquest <a href="https://carlosdaca.github.io/web22/">enllaç</a></p> 
-<hr>
-<blockquote>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi quaerat praesentium voluptatem in quas! Eligendi illo dolores sapiente ipsam optio magnam tempora atque nemo. Iusto voluptatum atque et odio pariatur.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident ipsa quo voluptatem minima debitis dignissimos possimus harum doloremque accusantium odio accusamus, error placeat mollitia, neque laboriosam. Veniam, eum maiores.
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, doloremque. Ipsam vel, cupiditate delectus debitis ducimus id saepe expedita, porro, deleniti veritatis eius. Quibusdam, nemo alias quas provident quam eligendi.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, corrupti doloremque facere mollitia cupiditate, ipsa rerum dignissimos consequuntur veritatis eius accusamus commodi optio dolorem vel corporis tenetur soluta voluptatibus modi.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ipsum reprehenderit impedit natus voluptatem voluptas rerum id blanditiis temporibus, itaque assumenda, ea quidem eos vero maxime maiores repellat excepturi a.
-</blockquote>
-<hr>
-<div class="bloc">
-    Bloc 1
-</div>
-<div class="bloc">
-    Bloc 2
-</div>
-<div class="bloc">
-    Bloc 3
-</div>
-<div class="bloc">
-    Bloc 4
-</div>
+    <main>
+        <header>
+            <hr>
 
-<span class="hola">hola</span>
-<span class="bon">bon dia</span>
+            <p>
+                Casat
+                <input type="checkbox" name="chek" id="chek" value="newsletter">
 
-<p class="azul">M'agraden molt els <span class="dissabtes">dissabtes</span></p>
-<hr>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.3167789047643!2d-0.3340449487691849!3d39.46217172095896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd60485c30e34a19%3A0x98f8d2cea8daa636!2sInstitut%20d&#39;Educaci%C3%B3%20Secund%C3%A0ria%20El%20Grao!5e0!3m2!1sca!2sus!4v1641890792167!5m2!1sca!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe><iframe width="560" height="315" src="https://www.youtube.com/embed/Rb0UmrCXxVA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
+            <p>
+                Tria el teo mitjà de transport favorit 
+                Bici <input type="checkbox" name="transport" id="transport" value="bici">
+                Bici <input type="checkbox" name="transport" id="transport" value="cotxe">
+                Bici <input type="checkbox" name="transport" id="transport" value="patí">
+            </p>
+
+            <p>
+                color favorit <br>
+                <input type="radio" name="color" value="roig">roig
+                <input type="radio" name="color" value="blau">blau
+                <input type="radio" name="color" value="verd">verd
+            </p>
+
+            <p>
+                color
+                <input type="color" name="micolor" id="micolor">
+            </p>
+
+            <p>
+                Selecciona el teu nivell de matemàtiques
+                <input type="range" name="rango" min="5" max="10" step="1">
+            </p>
+
+            <p>
+                <input type="submit" value="enviar">
+                <input type="reset" value="reset">
+                <input type="button" value="botó">
+            </p>
+    </main>
 </body>
 </html>
